gccida/c0/print_rtl_with_bb
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_rtl_with_bb/src/cfgrtl.c:1953:19: error: expected expression
print_rtl_with_bb::bb_state state; // [rsp+14h] [rbp-4Ch] 
                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_rtl_with_bb/src/cfgrtl.c:1956:19: error: expected expression
print_rtl_with_bb::bb_state *in_bb_p; // [rsp+28h] [rbp-38h] 
                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_rtl_with_bb/src/cfgrtl.c:1956:1: error: redefinition of label 'print_rtl_with_bb'
print_rtl_with_bb::bb_state *in_bb_p; // [rsp+28h] [rbp-38h] 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_rtl_with_bb/src/cfgrtl.c:1953:1: note: previous definition is here
print_rtl_with_bb::bb_state state; // [rsp+14h] [rbp-4Ch] 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_rtl_with_bb/src/cfgrtl.c:1969:1: error: use of undeclared identifier 'in_bb_p'
in_bb_p = ( print_rtl_with_bb::bb_state *)xcalloc( max_uid, 4uLL); 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_rtl_with_bb/src/cfgrtl.c:1969:30: error: expected ')'
in_bb_p = ( print_rtl_with_bb::bb_state *)xcalloc( max_uid, 4uLL); 
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_rtl_with_bb/src/cfgrtl.c:1969:11: note: to match this '('
in_bb_p = ( print_rtl_with_bb::bb_state *)xcalloc( max_uid, 4uLL); 
          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_rtl_with_bb/src/cfgrtl.c:1977:1: error: use of undeclared identifier 'state'
state = IN_MULTIPLE_BB; 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_rtl_with_bb/src/cfgrtl.c:1977:9: error: use of undeclared identifier 'IN_MULTIPLE_BB'
state = IN_MULTIPLE_BB; 
        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_rtl_with_bb/src/cfgrtl.c:1978:6: error: use of undeclared identifier 'in_bb_p'
if ( in_bb_p[x->fld[0].rtint] == NOT_IN_BB ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_rtl_with_bb/src/cfgrtl.c:1978:34: error: use of undeclared identifier 'NOT_IN_BB'
if ( in_bb_p[x->fld[0].rtint] == NOT_IN_BB ) 
                                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_rtl_with_bb/src/cfgrtl.c:1979:1: error: use of undeclared identifier 'state'
state = IN_ONE_BB; 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_rtl_with_bb/src/cfgrtl.c:1979:9: error: use of undeclared identifier 'IN_ONE_BB'
state = IN_ONE_BB; 
        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_rtl_with_bb/src/cfgrtl.c:1980:1: error: use of undeclared identifier 'in_bb_p'
in_bb_p[x->fld[0].rtint] = state; 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_rtl_with_bb/src/cfgrtl.c:1980:28: error: use of undeclared identifier 'state'; did you mean 'stat'?
in_bb_p[x->fld[0].rtint] = state; 
                           ^~~~~
                           stat
/usr/include/x86_64-linux-gnu/sys/stat.h:205:12: note: 'stat' declared here
extern int stat (const char *__restrict __file,
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_rtl_with_bb/src/cfgrtl.c:1994:6: error: use of undeclared identifier 'in_bb_p'
if ( in_bb_p[tmp_rtx->fld[0].rtint] 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_rtl_with_bb/src/cfgrtl.c:1998:6: error: use of undeclared identifier 'in_bb_p'
if ( in_bb_p[tmp_rtx->fld[0].rtint] == IN_MULTIPLE_BB ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_rtl_with_bb/src/cfgrtl.c:1998:40: error: use of undeclared identifier 'IN_MULTIPLE_BB'
if ( in_bb_p[tmp_rtx->fld[0].rtint] == IN_MULTIPLE_BB ) 
                                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_rtl_with_bb/src/cfgrtl.c:2018:7: error: use of undeclared identifier 'in_bb_p'
free( in_bb_p); 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_rtl_with_bb/src/cfgrtl.c:2027:72: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( tmp_rtxa = cfun->epilogue_delay_list; tmp_rtxa; tmp_rtxa = ( rtx)tmp_rtxa[1] ) 
                                                                       ^~~~~~~~~~~
18 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_rtl_with_bb/src/obj/cfgrtl.o] Error 1
